login form done

--- a/UI-Interface/index.html
+++ b/UI-Interface/index.html
@@ -8,6 +8,14 @@
     <title>NB-Aadhar</title>
 </head>
 <body>
+    <div class="bg-fullscreen">
+        <div class="login-form delayed-fadein">
+            <input type="text" name="l_u" placeholder="Username">
+            <input type="password" name="l_p" placeholder="Password">
+            <input type="button" value="Login">
+            <div class="helper">New User?</div>
+        </div>
+    </div>
     <script src="./assets/js/nb-aadhar.js"></script>
 </body>
 </html>
