--- a/UI-Interface/index.html
+++ b/UI-Interface/index.html
@@ -25,8 +25,25 @@
         </div>
     </div>
     <div class="intro-screen" id="dashboard">
-        
+        <div class="navbar">
+            <div class="brand">Footlock</div>
+            <div class="logout">Logout</div>
+        </div>
+        <div class="btn_holder">
+            <div class="card">
+                Register Now
+            </div>
+            <div class="card">
+                Register Missing Case
+            </div>
+            <div class="card">
+                Track Now
+            </div>
+        </div>
+        <div router-outlet></div>
     </div>
+    <script src="./assets/js/jq.min.js"></script>
+    <script src="./assets/js/route-now.min.js"></script>
     <script src="./assets/js/nb-aadhar.js"></script>
 </body>
 </html>
