--- a/UI-Interface/index.html
+++ b/UI-Interface/index.html
@@ -30,13 +30,13 @@
             <div class="logout">Logout</div>
         </div>
         <div class="btn_holder">
-            <div class="card">
+            <div class="card" onclick="navigateTo('register')">
                 Register Now
             </div>
-            <div class="card">
+            <div class="card" onclick="navigateTo('reportMissing')">
                 Register Missing Case
             </div>
-            <div class="card">
+            <div class="card" onclick="navigateTo('track')">
                 Track Now
             </div>
         </div>
