--- a/UI-Interface/index.html
+++ b/UI-Interface/index.html
@@ -27,7 +27,7 @@
     <div class="intro-screen" id="dashboard">
         <div class="navbar">
             <div class="brand">Footlock</div>
-            <div class="logout">Logout</div>
+            <div class="logout" onclick="logout()">Logout</div>
         </div>
         <div class="btn_holder">
             <div class="card" onclick="navigateTo('register')">
